--- a/css/navigation.css
+++ b/css/navigation.css
@@ -33,6 +33,10 @@ header.endHeader {
 
 /* notification banner UX */
 
+.wpfront-notification-bar div.wpfront-div {
+    padding: 5px 5vw;
+}
+
 #wpfront-notification-bar-spacer[style="top: 0px; height: 40px;"] {
     --hero-height: calc(100vh - var(--header-height) - 40px);
 }
@@ -718,7 +722,7 @@ nav .wp-block-navigation-submenu ul li a span,
 
     .fullscreen .submenu {
         margin-bottom: 1rem;
-        margin-left: 1.5rem;
+        margin-left: 0;
     }
 
     .fullscreen .submenu-item {
@@ -733,6 +737,10 @@ nav .wp-block-navigation-submenu ul li a span,
     .fullscreen .submenu-item:first-of-type {
         /* padding-top: 1rem; */
         /* padding-top: 0.333rem; */
+    }
+
+    .fullscreen .submenu-item:nth-of-type(11) {
+        display: none;
     }
 
     .fullscreen .submenu-link {
