--- a/css/subscribe-popup.css
+++ b/css/subscribe-popup.css
@@ -63,6 +63,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 .subscribe-close {
